monitoring/grafana-ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    istio: in-cluster-current-istio-ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - grafana.qrunio.dev
      tls:
        mode: SIMPLE
        credentialName: grafana-cert
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - grafana
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
